Add binoculars, list-search and pin icons

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -742,6 +742,13 @@
   </div>
 
   <div class="icon-container">
+    <svg class="icon-list-search">
+      <use xlink:href="/svg-defs.svg#icon-list-search"></use>
+    </svg>
+    <span class="icon-container-name">list-search</span>
+  </div>
+
+  <div class="icon-container">
     <svg class="icon-draft">
       <use xlink:href="/svg-defs.svg#icon-draft"></use>
     </svg>
@@ -774,6 +781,20 @@
       <use xlink:href="/svg-defs.svg#icon-microscope"></use>
     </svg>
     <span class="icon-container-name">microscope</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-pin">
+      <use xlink:href="/svg-defs.svg#icon-pin"></use>
+    </svg>
+    <span class="icon-container-name">pin</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-binoculars">
+      <use xlink:href="/svg-defs.svg#icon-binoculars"></use>
+    </svg>
+    <span class="icon-container-name">binoculars</span>
   </div>
 
 </div>
