--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -385,6 +385,13 @@
   </div>
 
   <div class="icon-container">
+    <svg class="icon-csv">
+      <use xlink:href="/svg-defs.svg#icon-csv"></use>
+    </svg>
+    <span class="icon-container-name">csv</span>
+  </div>
+
+  <div class="icon-container">
     <svg class="icon-list">
       <use xlink:href="/svg-defs.svg#icon-list"></use>
     </svg>
