Add twitter-ads icon

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -91,6 +91,13 @@
   </div>
 
   <div class="icon-container">
+    <svg class="icon-twitter-ads">
+      <use xlink:href="/svg-defs.svg#icon-twitter-ads"></use>
+    </svg>
+    <span class="icon-container-name">twitter-ads</span>
+  </div>
+
+  <div class="icon-container">
     <svg class="icon-instagram">
       <use xlink:href="/svg-defs.svg#icon-instagram"></use>
     </svg>
