Add at, flat and impressions svg icons

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -811,4 +811,24 @@
     <span class="icon-container-name">binoculars</span>
   </div>
 
+  <div class="icon-container">
+    <svg class="icon-at">
+      <use xlink:href="/svg-defs.svg#icon-at"></use>
+    </svg>
+    <span class="icon-container-name">at</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-flag">
+      <use xlink:href="/svg-defs.svg#icon-flag"></use>
+    </svg>
+    <span class="icon-container-name">flag</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-impressions">
+      <use xlink:href="/svg-defs.svg#icon-impressions"></use>
+    </svg>
+    <span class="icon-container-name">impressions</span>
+  </div>
 </div>
