Add noticeable colour as helper

--- a/sass/styleguide/helpers/_colors.scss
+++ b/sass/styleguide/helpers/_colors.scss
@@ -26,3 +26,7 @@
 .color-link {
     color: color($name: "service", $hue: "light")
 }
+
+.color-noticeable {
+    color: color($name: "noticeable");
+}
