--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -831,4 +831,60 @@
     </svg>
     <span class="icon-container-name">impressions</span>
   </div>
+
+  <div class="icon-container">
+    <svg class="icon-elnoyono">
+      <use xlink:href="/svg-defs.svg#icon-elnoyono"></use>
+    </svg>
+    <span class="icon-container-name">elnoyono</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-elnoyono-alert">
+      <use xlink:href="/svg-defs.svg#icon-elnoyono-alert"></use>
+    </svg>
+    <span class="icon-container-name">elnoyono-alert</span>
+  </div>
+
+   <div class="icon-container">
+    <svg class="icon-elnoyosi">
+      <use xlink:href="/svg-defs.svg#icon-elnoyosi"></use>
+    </svg>
+    <span class="icon-container-name">elnoyosi</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-elnoyosi-alert">
+      <use xlink:href="/svg-defs.svg#icon-elnoyosi-alert"></use>
+    </svg>
+    <span class="icon-container-name">elnoyosi-alert</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-elsiyono">
+      <use xlink:href="/svg-defs.svg#icon-elsiyono"></use>
+    </svg>
+    <span class="icon-container-name">elsiyono</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-elsiyono-alert">
+      <use xlink:href="/svg-defs.svg#icon-elsiyono-alert"></use>
+    </svg>
+    <span class="icon-container-name">elsiyono-alert</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-elsiyosi">
+      <use xlink:href="/svg-defs.svg#icon-elsiyosi"></use>
+    </svg>
+    <span class="icon-container-name">elsiyosi</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-elsiyosi-alert">
+      <use xlink:href="/svg-defs.svg#icon-elsiyosi-alert"></use>
+    </svg>
+    <span class="icon-container-name">elsiyosi-alert</span>
+  </div>
 </div>
