Adapt new icons names to classes used in the app

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -833,58 +833,60 @@
   </div>
 
   <div class="icon-container">
-    <svg class="icon-elnoyono">
-      <use xlink:href="/svg-defs.svg#icon-elnoyono"></use>
+    <svg class="icon-i-profile-follow">
+      <use xlink:href="/svg-defs.svg#icon-i-profile-follow"></use>
     </svg>
-    <span class="icon-container-name">elnoyono</span>
+    <span class="icon-container-name">i-profile-follow</span>
   </div>
 
   <div class="icon-container">
-    <svg class="icon-elnoyono-alert">
-      <use xlink:href="/svg-defs.svg#icon-elnoyono-alert"></use>
+    <svg class="icon-i-profile-follow-warn">
+      <use xlink:href="/svg-defs.svg#icon-i-profile-follow-warn"></use>
     </svg>
-    <span class="icon-container-name">elnoyono-alert</span>
-  </div>
-
-   <div class="icon-container">
-    <svg class="icon-elnoyosi">
-      <use xlink:href="/svg-defs.svg#icon-elnoyosi"></use>
-    </svg>
-    <span class="icon-container-name">elnoyosi</span>
+    <span class="icon-container-name">i-profile-follow-warn</span>
   </div>
 
   <div class="icon-container">
-    <svg class="icon-elnoyosi-alert">
-      <use xlink:href="/svg-defs.svg#icon-elnoyosi-alert"></use>
+    <svg class="icon-i-profile-reciprocal">
+      <use xlink:href="/svg-defs.svg#icon-i-profile-reciprocal"></use>
     </svg>
-    <span class="icon-container-name">elnoyosi-alert</span>
+    <span class="icon-container-name">i-profile-reciprocal</span>
   </div>
 
   <div class="icon-container">
-    <svg class="icon-elsiyono">
-      <use xlink:href="/svg-defs.svg#icon-elsiyono"></use>
+    <svg class="icon-i-profile-reciprocal-warn">
+      <use xlink:href="/svg-defs.svg#icon-i-profile-reciprocal-warn"></use>
     </svg>
-    <span class="icon-container-name">elsiyono</span>
+    <span class="icon-container-name">i-profile-reciprocal-warn</span>
   </div>
 
   <div class="icon-container">
-    <svg class="icon-elsiyono-alert">
-      <use xlink:href="/svg-defs.svg#icon-elsiyono-alert"></use>
+    <svg class="icon-i-profile-nofollow">
+      <use xlink:href="/svg-defs.svg#icon-i-profile-nofollow"></use>
     </svg>
-    <span class="icon-container-name">elsiyono-alert</span>
+    <span class="icon-container-name">i-profile-nofollow</span>
   </div>
 
   <div class="icon-container">
-    <svg class="icon-elsiyosi">
-      <use xlink:href="/svg-defs.svg#icon-elsiyosi"></use>
+    <svg class="icon-i-profile-nofollow-warn">
+      <use xlink:href="/svg-defs.svg#icon-i-profile-nofollow-warn"></use>
     </svg>
-    <span class="icon-container-name">elsiyosi</span>
+    <span class="icon-container-name">i-profile-nofollow-warn</span>
   </div>
 
   <div class="icon-container">
-    <svg class="icon-elsiyosi-alert">
-      <use xlink:href="/svg-defs.svg#icon-elsiyosi-alert"></use>
+    <svg class="icon-i-profile-follow-none">
+      <use xlink:href="/svg-defs.svg#icon-i-profile-follow-none"></use>
     </svg>
-    <span class="icon-container-name">elsiyosi-alert</span>
+    <span class="icon-container-name">i-profile-follow-none</span>
   </div>
+
+  <div class="icon-container">
+    <svg class="icon-i-profile-follow-none-warn">
+      <use xlink:href="/svg-defs.svg#icon-i-profile-follow-none-warn"></use>
+    </svg>
+    <span class="icon-container-name">i-profile-follow-none-warn</span>
+  </div>
+
+
 </div>
