Added card-add element

--- a/sass/styleguide/main.scss
+++ b/sass/styleguide/main.scss
@@ -65,6 +65,7 @@ This library is divided in the following sections:
 @import "objects/tables";
 @import "objects/tabs";
 @import "objects/tooltips";
+@import "objects/cards";
 
 /* 5. Layout */
 
