--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -728,6 +728,13 @@
   </div>
 
   <div class="icon-container">
+    <svg class="icon-plus-radius-custom" style="fill: #29c4d0; color: grey">
+      <use xlink:href="/svg-defs.svg#icon-plus-radius-custom"></use>
+    </svg>
+    <span class="icon-container-name">plus-radius-custom</span>
+  </div>
+
+  <div class="icon-container">
     <svg class="icon-minus-radius">
       <use xlink:href="/svg-defs.svg#icon-minus-radius"></use>
     </svg>
