--- a/views/partial/menu.html
+++ b/views/partial/menu.html
@@ -1,6 +1,7 @@
 <div class="one-quarter grid-column">
   <nav class="docs-menu mr3">
     <a class="docs-menu-item {% if section == 'colors' %}selected{% endif %}" href="/docs/colors">Colors</a>
+    <a class="docs-menu-item {% if section == 'cards' %}selected{% endif %}" href="/docs/cards">Cards</a>
     <a class="docs-menu-item {% if section == 'buttons' %}selected{% endif %}" href="/docs/buttons">Buttons</a>
     <a class="docs-menu-item {% if section == 'containers' %}selected{% endif %}" href="/docs/containers">Containers</a>
     <a class="docs-menu-item {% if section == 'icons' %}selected{% endif %}" href="/docs/icons">Icons</a>
