Improves in add card

--- a/sass/styleguide/core/_colors.scss
+++ b/sass/styleguide/core/_colors.scss
@@ -8,7 +8,7 @@ $colors:
   "service"      #00aaf2 #65b0cf #dfeffc,
   "socialbro"    #29c4d0 #41787c #c1eff3,
   "succeed"      #72c427 #9fb87d #e1f6de,
-  "text"         #5e5e5e #b9b9b9,
+  "text"         #5e5e5e #b9b9b9 #b1b1b1,
   "titles"       #191919 #8a4fa2,
   "twitter"      #55acee;
 
