Add hashtag and bubble-twitter icons

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -525,10 +525,24 @@
   </div>
 
   <div class="icon-container">
+    <svg class="icon-bubble-twitter">
+      <use xlink:href="/svg-defs.svg#icon-bubble-twitter"></use>
+    </svg>
+    <span class="icon-container-name">bubble-twitter</span>
+  </div>
+
+  <div class="icon-container">
     <svg class="icon-bubble-check">
       <use xlink:href="/svg-defs.svg#icon-bubble-check"></use>
     </svg>
     <span class="icon-container-name">bubble-check</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-hashtag">
+      <use xlink:href="/svg-defs.svg#icon-hashtag"></use>
+    </svg>
+    <span class="icon-container-name">hashtag</span>
   </div>
 
   <div class="icon-container">
