--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -902,5 +902,17 @@
     <span class="icon-container-name">i-profile-follow-none-warn</span>
   </div>
 
+  <div class="icon-container">
+    <svg class="icon-clock">
+      <use xlink:href="/svg-defs.svg#icon-clock"></use>
+    </svg>
+    <span class="icon-container-name">clock</span>
+  </div>
 
+  <div class="icon-container">
+    <svg class="icon-world">
+      <use xlink:href="/svg-defs.svg#icon-world"></use>
+    </svg>
+    <span class="icon-container-name">world</span>
+  </div>
 </div>
