Add icons for enrichment categories

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -915,4 +915,74 @@
     </svg>
     <span class="icon-container-name">world</span>
   </div>
+
+  <div class="icon-container">
+    <svg class="icon-behavior">
+      <use xlink:href="/svg-defs.svg#icon-behavior"></use>
+    </svg>
+    <span class="icon-container-name">behavior</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-consumption">
+      <use xlink:href="/svg-defs.svg#icon-consumption"></use>
+    </svg>
+    <span class="icon-container-name">consumption</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-content">
+      <use xlink:href="/svg-defs.svg#icon-content"></use>
+    </svg>
+    <span class="icon-container-name">content</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-demographic">
+      <use xlink:href="/svg-defs.svg#icon-demographic"></use>
+    </svg>
+    <span class="icon-container-name">demographic</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-devices">
+      <use xlink:href="/svg-defs.svg#icon-devices"></use>
+    </svg>
+    <span class="icon-container-name">devices</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-geosearch">
+      <use xlink:href="/svg-defs.svg#icon-geosearch"></use>
+    </svg>
+    <span class="icon-container-name">geosearch</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-lifestyle">
+      <use xlink:href="/svg-defs.svg#icon-lifestyle"></use>
+    </svg>
+    <span class="icon-container-name">lifestyle</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-personality">
+      <use xlink:href="/svg-defs.svg#icon-personality"></use>
+    </svg>
+    <span class="icon-container-name">personality</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-relationship">
+      <use xlink:href="/svg-defs.svg#icon-relationship"></use>
+    </svg>
+    <span class="icon-container-name">relationship</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-timing">
+      <use xlink:href="/svg-defs.svg#icon-timing"></use>
+    </svg>
+    <span class="icon-container-name">timing</span>
+  </div>
 </div>
