Rename category icons

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -917,10 +917,10 @@
   </div>
 
   <div class="icon-container">
-    <svg class="icon-behavior">
-      <use xlink:href="/svg-defs.svg#icon-behavior"></use>
+    <svg class="icon-behaviour">
+      <use xlink:href="/svg-defs.svg#icon-behaviour"></use>
     </svg>
-    <span class="icon-container-name">behavior</span>
+    <span class="icon-container-name">behaviour</span>
   </div>
 
   <div class="icon-container">
@@ -938,10 +938,10 @@
   </div>
 
   <div class="icon-container">
-    <svg class="icon-demographic">
-      <use xlink:href="/svg-defs.svg#icon-demographic"></use>
+    <svg class="icon-demographics">
+      <use xlink:href="/svg-defs.svg#icon-demographics"></use>
     </svg>
-    <span class="icon-container-name">demographic</span>
+    <span class="icon-container-name">demographics</span>
   </div>
 
   <div class="icon-container">
@@ -952,10 +952,10 @@
   </div>
 
   <div class="icon-container">
-    <svg class="icon-geosearch">
-      <use xlink:href="/svg-defs.svg#icon-geosearch"></use>
+    <svg class="icon-location">
+      <use xlink:href="/svg-defs.svg#icon-location"></use>
     </svg>
-    <span class="icon-container-name">geosearch</span>
+    <span class="icon-container-name">location</span>
   </div>
 
   <div class="icon-container">
@@ -973,10 +973,10 @@
   </div>
 
   <div class="icon-container">
-    <svg class="icon-relationship">
-      <use xlink:href="/svg-defs.svg#icon-relationship"></use>
+    <svg class="icon-relationships">
+      <use xlink:href="/svg-defs.svg#icon-relationships"></use>
     </svg>
-    <span class="icon-container-name">relationship</span>
+    <span class="icon-container-name">relationships</span>
   </div>
 
   <div class="icon-container">
