Rename devices icon to technology

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -945,10 +945,10 @@
   </div>
 
   <div class="icon-container">
-    <svg class="icon-devices">
-      <use xlink:href="/svg-defs.svg#icon-devices"></use>
+    <svg class="icon-technology">
+      <use xlink:href="/svg-defs.svg#icon-technology"></use>
     </svg>
-    <span class="icon-container-name">devices</span>
+    <span class="icon-container-name">technology</span>
   </div>
 
   <div class="icon-container">
