Add add-source icon

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -985,4 +985,11 @@
     </svg>
     <span class="icon-container-name">timing</span>
   </div>
+
+  <div class="icon-container">
+    <svg class="icon-add-source">
+      <use xlink:href="/svg-defs.svg#icon-add-source"></use>
+    </svg>
+    <span class="icon-container-name">add-source</span>
+  </div>
 </div>
