Add add-blacklist icon

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -992,4 +992,11 @@
     </svg>
     <span class="icon-container-name">add-source</span>
   </div>
+
+  <div class="icon-container">
+    <svg class="icon-add-blacklist">
+      <use xlink:href="/svg-defs.svg#icon-add-blacklist"></use>
+    </svg>
+    <span class="icon-container-name">add-blacklist</span>
+  </div>
 </div>
