Add add-whitelist icon

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -999,4 +999,11 @@
     </svg>
     <span class="icon-container-name">add-blacklist</span>
   </div>
+
+  <div class="icon-container">
+    <svg class="icon-add-whitelist">
+      <use xlink:href="/svg-defs.svg#icon-add-whitelist"></use>
+    </svg>
+    <span class="icon-container-name">add-whitelist</span>
+  </div>
 </div>
