Add list-edit icon

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -427,6 +427,13 @@
   </div>
 
   <div class="icon-container">
+    <svg class="icon-list-edit">
+      <use xlink:href="/svg-defs.svg#icon-list-edit"></use>
+    </svg>
+    <span class="icon-container-name">list-edit</span>
+  </div>
+
+  <div class="icon-container">
     <svg class="icon-usermail">
       <use xlink:href="/svg-defs.svg#icon-usermail"></use>
     </svg>
