Add tag-edit icon

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -469,6 +469,13 @@
   </div>
 
   <div class="icon-container">
+    <svg class="icon-tag-edit">
+      <use xlink:href="/svg-defs.svg#icon-tag-edit"></use>
+    </svg>
+    <span class="icon-container-name">tag-edit</span>
+  </div>
+
+  <div class="icon-container">
     <svg class="icon-scissors">
       <use xlink:href="/svg-defs.svg#icon-scissors"></use>
     </svg>
