Add remove-blacklist icon

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -1015,6 +1015,13 @@
   </div>
 
   <div class="icon-container">
+    <svg class="icon-remove-blacklist">
+      <use xlink:href="/svg-defs.svg#icon-remove-blacklist"></use>
+    </svg>
+    <span class="icon-container-name">remove-blacklist</span>
+  </div>
+
+  <div class="icon-container">
     <svg class="icon-add-whitelist">
       <use xlink:href="/svg-defs.svg#icon-add-whitelist"></use>
     </svg>
