Add remove-whitelist icon

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -1022,6 +1022,13 @@
   </div>
 
   <div class="icon-container">
+    <svg class="icon-remove-whitelist">
+      <use xlink:href="/svg-defs.svg#icon-remove-whitelist"></use>
+    </svg>
+    <span class="icon-container-name">remove-whitelist</span>
+  </div>
+
+  <div class="icon-container">
     <svg class="icon-add-whitelist">
       <use xlink:href="/svg-defs.svg#icon-add-whitelist"></use>
     </svg>
