Add select-all icon

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -1034,4 +1034,11 @@
     </svg>
     <span class="icon-container-name">add-whitelist</span>
   </div>
+
+  <div class="icon-container">
+    <svg class="icon-select-all">
+      <use xlink:href="/svg-defs.svg#icon-select-all"></use>
+    </svg>
+    <span class="icon-container-name">select-all</span>
+  </div>
 </div>
