Add unselect-all icon

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -1041,4 +1041,11 @@
     </svg>
     <span class="icon-container-name">select-all</span>
   </div>
+
+  <div class="icon-container">
+    <svg class="icon-unselect-all">
+      <use xlink:href="/svg-defs.svg#icon-unselect-all"></use>
+    </svg>
+    <span class="icon-container-name">unselect-all</span>
+  </div>
 </div>
