Add verified icon

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -1048,4 +1048,11 @@
     </svg>
     <span class="icon-container-name">unselect-all</span>
   </div>
+
+  <div class="icon-container">
+    <svg class="icon-verified">
+      <use xlink:href="/svg-defs.svg#icon-verified"></use>
+    </svg>
+    <span class="icon-container-name">verified</span>
+  </div>
 </div>
