Add new version of pdf icon

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -518,6 +518,13 @@
   </div>
 
   <div class="icon-container">
+    <svg class="icon-pdf-2">
+      <use xlink:href="/svg-defs.svg#icon-pdf-2"></use>
+    </svg>
+    <span class="icon-container-name">pdf-2</span>
+  </div>
+
+  <div class="icon-container">
     <svg class="icon-xls">
       <use xlink:href="/svg-defs.svg#icon-xls"></use>
     </svg>
@@ -1054,5 +1061,12 @@
       <use xlink:href="/svg-defs.svg#icon-verified"></use>
     </svg>
     <span class="icon-container-name">verified</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-donut-chart">
+      <use xlink:href="/svg-defs.svg#icon-donut-chart"></use>
+    </svg>
+    <span class="icon-container-name">donut-chart</span>
   </div>
 </div>
