Add filters icon

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -1064,9 +1064,9 @@
   </div>
 
   <div class="icon-container">
-    <svg class="icon-donut-chart">
-      <use xlink:href="/svg-defs.svg#icon-donut-chart"></use>
+    <svg class="icon-filters">
+      <use xlink:href="/svg-defs.svg#icon-filters"></use>
     </svg>
-    <span class="icon-container-name">donut-chart</span>
+    <span class="icon-container-name">filters</span>
   </div>
 </div>
