Add new version of xls icon

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -532,6 +532,13 @@
   </div>
 
   <div class="icon-container">
+    <svg class="icon-xls-2">
+      <use xlink:href="/svg-defs.svg#icon-xls-2"></use>
+    </svg>
+    <span class="icon-container-name">xls-2</span>
+  </div>
+
+  <div class="icon-container">
     <svg class="icon-ads">
       <use xlink:href="/svg-defs.svg#icon-ads"></use>
     </svg>
