--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -1076,4 +1076,11 @@
     </svg>
     <span class="icon-container-name">filters</span>
   </div>
+
+  <div class="icon-container">
+    <svg class="icon-lock">
+      <use xlink:href="/svg-defs.svg#icon-lock"></use>
+    </svg>
+    <span class="icon-container-name">lock</span>
+  </div>
 </div>
