Add watson icon

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -1083,4 +1083,11 @@
     </svg>
     <span class="icon-container-name">lock</span>
   </div>
+
+  <div class="icon-container">
+    <svg class="icon-watson">
+      <use xlink:href="/svg-defs.svg#icon-watson"></use>
+    </svg>
+    <span class="icon-container-name">watson</span>
+  </div>
 </div>
