Add csv-2 and audience-remove icons

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -329,6 +329,13 @@
   </div>
 
   <div class="icon-container">
+    <svg class="icon-audience-remove">
+      <use xlink:href="/svg-defs.svg#icon-audience-remove"></use>
+    </svg>
+    <span class="icon-container-name">audience-remove</span>
+  </div>
+
+  <div class="icon-container">
     <svg class="icon-play-video">
       <use xlink:href="/svg-defs.svg#icon-play-video"></use>
     </svg>
@@ -396,6 +403,13 @@
       <use xlink:href="/svg-defs.svg#icon-csv"></use>
     </svg>
     <span class="icon-container-name">csv</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-csv-2">
+      <use xlink:href="/svg-defs.svg#icon-csv-2"></use>
+    </svg>
+    <span class="icon-container-name">csv-2</span>
   </div>
 
   <div class="icon-container">
