New 'engagement' icon

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -1104,4 +1104,11 @@
     </svg>
     <span class="icon-container-name">watson</span>
   </div>
+
+  <div class="icon-container">
+    <svg class="icon-engagement">
+      <use xlink:href="/svg-defs.svg#icon-engagement"></use>
+    </svg>
+    <span class="icon-container-name">engagement</span>
+  </div>
 </div>
