Add icon for profile information category

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -1111,4 +1111,11 @@
     </svg>
     <span class="icon-container-name">engagement</span>
   </div>
+
+  <div class="icon-container">
+    <svg class="icon-profile-information">
+      <use xlink:href="/svg-defs.svg#icon-profile-information"></use>
+    </svg>
+    <span class="icon-container-name">profile-information</span>
+  </div>
 </div>
