Update demographic icons

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -274,6 +274,13 @@
   </div>
 
   <div class="icon-container">
+    <svg class="icon-demographics-round">
+      <use xlink:href="/svg-defs.svg#icon-demographics-round"></use>
+    </svg>
+    <span class="icon-container-name">demographics-round</span>
+  </div>
+
+  <div class="icon-container">
     <svg class="icon-document">
       <use xlink:href="/svg-defs.svg#icon-document"></use>
     </svg>
