--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -540,6 +540,13 @@
   </div>
 
   <div class="icon-container">
+    <svg class="icon-kebab">
+      <use xlink:href="/svg-defs.svg#icon-kebab"></use>
+    </svg>
+    <span class="icon-container-name">kebab</span>
+  </div>
+
+  <div class="icon-container">
     <svg class="icon-kred">
       <use xlink:href="/svg-defs.svg#icon-kred"></use>
     </svg>
