--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -295,6 +295,13 @@
   </div>
 
   <div class="icon-container">
+    <svg class="icon-drag">
+      <use xlink:href="/svg-defs.svg#icon-drag"></use>
+    </svg>
+    <span class="icon-container-name">drag</span>
+  </div>
+
+  <div class="icon-container">
     <svg class="icon-draft">
       <use xlink:href="/svg-defs.svg#icon-draft"></use>
     </svg>
