--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -253,6 +253,13 @@
   </div>
 
   <div class="icon-container">
+    <svg class="icon-cross">
+      <use xlink:href="/svg-defs.svg#icon-cross"></use>
+    </svg>
+    <span class="icon-container-name">cross</span>
+  </div>
+
+  <div class="icon-container">
     <svg class="icon-csv">
       <use xlink:href="/svg-defs.svg#icon-csv"></use>
     </svg>
