--- a/views/components/forms/general-inputs.html
+++ b/views/components/forms/general-inputs.html
@@ -1,3 +1,5 @@
+<input class="input-base large hundred percent db mb1" type="text" placeholder="Big placeholder">
+<input class="input-base large dark hundred percent db mb1" type="text" placeholder="Dark placeholder">
 <input class="input-base" type="text" placeholder="Test placeholder">
 <button class="input-base with-caret">Trigger a Dropdown</button>
 <div class="input-base with-caret">
