Add audiense logo

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -1,5 +1,11 @@
 <div class="icons-holder clearfix">
-  
+  <div class="icon-container">
+    <svg class="icon-audiense-logo">
+      <use xlink:href="/svg-defs.svg#icon-audiense-logo"></use>
+    </svg>
+    <span class="icon-container-name">audiense-logo</span>
+  </div>
+
   <div class="icon-container">
     <svg class="icon-add-source">
       <use xlink:href="/svg-defs.svg#icon-add-source"></use>
@@ -83,7 +89,7 @@
     </svg>
     <span class="icon-container-name">behaviour</span>
   </div>
-  
+
   <div class="icon-container">
     <svg class="icon-bell">
       <use xlink:href="/svg-defs.svg#icon-bell"></use>
@@ -216,7 +222,7 @@
     </svg>
     <span class="icon-container-name">close</span>
   </div>
-  
+
   <div class="icon-container">
     <svg class="icon-comparison">
       <use xlink:href="/svg-defs.svg#icon-comparison"></use>
@@ -321,14 +327,14 @@
     </svg>
     <span class="icon-container-name">edit</span>
   </div>
-  
+
   <div class="icon-container">
     <svg class="icon-edit-notes">
       <use xlink:href="/svg-defs.svg#icon-edit-notes"></use>
     </svg>
     <span class="icon-container-name">edit-notes</span>
   </div>
-  
+
   <div class="icon-container">
     <svg class="icon-edit-tags">
       <use xlink:href="/svg-defs.svg#icon-edit-tags"></use>
@@ -566,7 +572,7 @@
     </svg>
     <span class="icon-container-name">kred</span>
   </div>
-  
+
   <div class="icon-container">
     <svg class="icon-learn">
       <use xlink:href="/svg-defs.svg#icon-learn"></use>
@@ -650,7 +656,7 @@
     </svg>
     <span class="icon-container-name">magnet</span>
   </div>
-  
+
   <div class="icon-container">
     <svg class="icon-magnet-alt">
       <use xlink:href="/svg-defs.svg#icon-magnet-alt"></use>
@@ -727,7 +733,7 @@
     </svg>
     <span class="icon-container-name">open-in-instagram</span>
   </div>
-  
+
   <div class="icon-container">
     <svg class="icon-pause">
       <use xlink:href="/svg-defs.svg#icon-pause"></use>
@@ -895,7 +901,7 @@
     </svg>
     <span class="icon-container-name">rt</span>
   </div>
-  
+
   <div class="icon-container">
     <svg class="icon-running">
       <use xlink:href="/svg-defs.svg#icon-running"></use>
@@ -1098,7 +1104,7 @@
     </svg>
     <span class="icon-container-name">user</span>
   </div>
-  
+
   <div class="icon-container">
     <svg class="icon-usermail">
       <use xlink:href="/svg-defs.svg#icon-usermail"></use>
@@ -1147,5 +1153,4 @@
     </svg>
     <span class="icon-container-name">world</span>
   </div>
-
 </div>
