--- a/sass/styleguide/helpers/_with-caret.scss
+++ b/sass/styleguide/helpers/_with-caret.scss
@@ -14,3 +14,23 @@
         z-index: 1;
     }
 }
+
+.with-thin-caret {
+    cursor: pointer;
+
+    &:after {
+        border-bottom-width: 1px;
+        border-color: currentColor;
+        border-left-width: 0;
+        border-right-width: 1px;
+        border-style: solid;
+        border-top-width: 0;
+        content: "";
+        display: inline-block;
+        height: 4px;
+        pointer-events: none;
+        transform: rotate(45deg) translateY(-50%);
+        width: 4px;
+        z-index: 1;
+    }
+}
