Add greater-than icon

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -421,6 +421,13 @@
   </div>
 
   <div class="icon-container">
+    <svg class="icon-greater-than">
+      <use xlink:href="/svg-defs.svg#icon-greater-than"></use>
+    </svg>
+    <span class="icon-container-name">greater-than</span>
+  </div>
+
+  <div class="icon-container">
     <svg class="icon-group-people">
       <use xlink:href="/svg-defs.svg#icon-group-people"></use>
     </svg>
