Update helper css for animations

--- a/sass/styleguide/main.scss
+++ b/sass/styleguide/main.scss
@@ -72,7 +72,7 @@ This library is divided in the following sections:
 @import "layout/dashboard/breadcrumb";
 
 /* 6. Helpers */
-
+@import "helpers/animations";
 @import "helpers/align";
 @import "helpers/avatar";
 @import "helpers/clearfix";
