--- a/views/components/buttons/regular.html
+++ b/views/components/buttons/regular.html
@@ -1,10 +1,18 @@
-<button class="btn">Base</button>
-<button class="btn btn-primary">Primary</button>
-<button class="btn btn-success">
+<button class="btn m1">Base</button>
+<button class="btn btn-primary m1">Primary</button>
+
+<button class="btn btn-filled blue m1">Filled blue</button>
+<button class="btn btn-filled orange m1">Filled orange</button>
+<button class="btn btn-filled tea m1">Filled tea</button>
+<button class="btn btn-hollow blue m1">Hollow blue</button>
+<button class="btn btn-hollow orange m1">Hollow orange</button>
+<button class="btn btn-hollow tea m1">Hollow tea</button>
+
+<button class="btn btn-success m1">
   <svg class="icon"><use xlink:href="/svg-defs.svg#icon-nut"></use></svg>
   Success
 </button>
-<button class="btn btn-service with-caret">Service</button>
-<button class="btn btn-danger">Danger</button>
-<button class="btn btn-contrast">Contrast</button>
-<button class="btn btn-skip">Skip</button>
+<button class="btn btn-service with-caret m1">Service</button>
+<button class="btn btn-danger m1">Danger</button>
+<button class="btn btn-contrast m1">Contrast</button>
+<button class="btn btn-skip m1">Skip</button>
