--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -106,6 +106,13 @@
   </div>
 
   <div class="icon-container">
+    <svg class="icon-beta">
+      <use xlink:href="/svg-defs.svg#icon-beta"></use>
+    </svg>
+    <span class="icon-container-name">beta</span>
+  </div>
+
+  <div class="icon-container">
     <svg class="icon-binoculars">
       <use xlink:href="/svg-defs.svg#icon-binoculars"></use>
     </svg>
