Fix bicolor icon beta

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -106,7 +106,7 @@
   </div>
 
   <div class="icon-container">
-    <svg class="icon-beta">
+    <svg class="icon-beta" style="fill: #F4C52D; stroke: #0B2F3D">
       <use xlink:href="/svg-defs.svg#icon-beta"></use>
     </svg>
     <span class="icon-container-name">beta</span>
