Import animations helper in sandbox css file

--- a/sass/styleguide/sandbox.scss
+++ b/sass/styleguide/sandbox.scss
@@ -76,6 +76,7 @@ This library is divided in the following sections:
 /* 6. Helpers */
 
 @import "helpers/align";
+@import "helpers/animations";
 @import "helpers/avatar";
 @import "helpers/clearfix";
 @import "helpers/colors";
