--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -379,6 +379,13 @@
   </div>
 
   <div class="icon-container">
+    <svg class="icon-externallink">
+      <use xlink:href="/svg-defs.svg#icon-externallink"></use>
+    </svg>
+    <span class="icon-container-name">externallink</span>
+  </div>
+
+  <div class="icon-container">
     <svg class="icon-fav">
       <use xlink:href="/svg-defs.svg#icon-fav"></use>
     </svg>
